<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/course_text_view"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/course_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286" />

    <Button
        android:id="@+id/coursetotalfees_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/coursetotalfees_button"
        app:layout_constraintEnd_toEndOf="@+id/coursetotalfees_text_view"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/coursetotalfees_text_view"
        app:layout_constraintTop_toBottomOf="@+id/coursetotalfees_text_view" />

    <Button
        android:id="@+id/coursenext_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/coursenext_button"
        app:layout_constraintEnd_toEndOf="@+id/coursetotalfees_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/coursetotalfees_button"
        app:layout_constraintTop_toBottomOf="@+id/coursetotalfees_button" />

    <Button
        android:id="@+id/course_detail_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/course_detail_button"
        app:layout_constraintEnd_toEndOf="@+id/coursenext_button"
        app:layout_constraintStart_toStartOf="@+id/coursenext_button"
        app:layout_constraintTop_toBottomOf="@+id/coursenext_button" />

    <TextView
        android:id="@+id/coursetotalfees_text_view"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/coursetotalfees_text_view"
        app:layout_constraintEnd_toEndOf="@+id/course_text_view"
        app:layout_constraintStart_toStartOf="@+id/course_text_view"
        app:layout_constraintTop_toBottomOf="@+id/course_text_view" />
</androidx.constraintlayout.widget.ConstraintLayout>