<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseActivity">

    <EditText
        android:id="@+id/course_no_edit_text"
        android:layout_width="192dp"
        android:layout_height="42dp"
        android:text="@string/course_no_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <EditText
        android:id="@+id/course_name_edit_text"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:text="@string/course_name_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/course_no_edit_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/course_no_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/course_no_edit_text" />

    <EditText
        android:id="@+id/course_max_enrl_edit_text"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:text="@string/course_max_enrl_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/course_name_edit_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/course_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/course_name_edit_text" />

    <EditText
        android:id="@+id/course_credits_edit_text"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/course_credits_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/course_max_enrl_edit_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/course_max_enrl_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/course_max_enrl_edit_text" />

    <Button
        android:id="@+id/course_update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/course_update_button"
        app:layout_constraintEnd_toEndOf="@+id/course_credits_edit_text"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/course_credits_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/course_credits_edit_text" />
</androidx.constraintlayout.widget.ConstraintLayout>